# SETai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  indexa.html  ip-seller.html  manage.py  pos-demo.html  pyproject.toml  saderat-bank.html  seo.html  setai.html  shaparak-pos-demo.html  shaparak-pos-scenario-demo.html  shaparak-switch-ultra.html  shaparak-ui-realistic-demo.html  story.html
apps/accounts/: admin.py  models.py  signals.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templates/accounts/: dashboard.html
apps/core/: middleware.py  views.py
apps/core/templates/: base.html  showcase.html
apps/core/templates/partials/: navbar.html
apps/projects/: admin.py  models.py  urls.py  views.py
apps/projects/api/: serializers.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py
apps/projects/services/: ai_proposal.py  deploy.py  diff_engine.py  github_client.py
apps/projects/templates/projects/: command.html  connect_repo.html  history.html  proposal.html  published.html
docs/: mvp-implementation-plan.md
locale/en/LC_MESSAGES/: django.po
locale/no/LC_MESSAGES/: django.po
setai/: asgi.py  settings.py  urls.py  wsgi.py
static/: app.css
