[tool.poetry]
name = "setai"
version = "0.1.0"
description = "SETai MVP"
authors = ["SETai"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.15"
django-allauth = "^0.63"
pygithub = "^2.3"
httpx = "^0.27"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5"
black = "^24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
